# metel

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
cmake/: deps.cmake
include/metel/: box.hpp  box_union.hpp  macro.hpp  meta.hpp
test/: CMakeLists.txt  test_box.cpp  test_typelist.cpp
